--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
-name = scrapy-selenium
-version = 0.0.7
+name = scrapy_selenium
+version = 0.0.8
 url = https://github.com/clemfromspace/scrapy-selenium
-licence = DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
+licence = KOPI ME
 description = Scrapy with selenium
 
 [options]
