--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-name = scrapy_selenium
+name = py_selenium_scrapy
 version = 0.0.8
 url = https://github.com/sushil-bigfuture/scrapy-selenium
 licence = KOPI ME
-description = Scrapy with selenium
+description = Scrapy with selenium in Python
 
 [options]
 include_package_data = true
